16-02-2011: 2.0.6
	fix: no longer stops syslogging on HUP signals
	fix: OSX event watcher no longer misses moves into and out of the watch tree
	fix: not refinding a relative path to the config file in case of HUP.
	fix: rsync doing error 13 and killing Lsyncd.
		see http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=659941
	fix: no event creation during shutdown (might loop before)
	fix: no logging due to wrong log levels
	fix: without-inotify compile option now works to compile on OSX
	fix: in case of HUP-reset imply insist=true, since startup is known to be
		configured correctly.
	fix: a series of typos in comments, manpage etc.
	fix: moves to and from deleted directories (deleted when Lsyncd gets notified)
		were not correctly translated
	fix: added --ignore-errors to rsync when deleting files, so it will not miss a delete
		even when another part of the tree made an IO-error.
	fix: default.direct now not using -p for mkdir since if the dir is not there it should fail
	fix: default.direct now not using -t for cp since OSX binutils doesn't understand it
	fix: some files might have been missed in splitting move events (especially on tests on OSX)
	change: complain if any "rsyncOps" is given
	change: splitted the default configurations in their own files.
		more cleanly seperated from the Lsyncd runner, and highlights it are just
		Layer 1 configurations that happen to be provided by default.
	change: Beautified the code, no extra spaces at line end, ' instead of ",
		supposing 100 char width to view,
	change: Lsyncd now remembers the absolute path of its config file during HUPs
	enhancement: Defaults now respect a 'delete=false' flag when set as parameter to sync{}
		default.rsync:    does not add --delete to rsync
		default.rsyncssh: does not add --delete to rsync, and does not use rm via ssh tunnel
		default.direct:   does not add --delete to startup rsync and does not use rm

25-08-2011: 2.0.5
	fix: Lsyncd will now terminate if it inotify watching exceeds