@@ -1,3 +1,6 @@
+??-??-????:
+	fix: defalut.direct, do not use on OSX unrecognized option -t on modify
+
 16-02-2011: 2.0.6
 	fix: no longer stops syslogging on HUP signals
 	fix: OSX event watcher no longer misses moves into and out of the watch tree
